--- a/index.html
+++ b/index.html
@@ -76,15 +76,14 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
-
+  const firebaseConfig = {
+  apiKey: "AIzaSyCC9KhkXQvCYOyUoare3h33gXMEIFb3fIg",
+  authDomain: "fichasacds.firebaseapp.com",
+  projectId: "fichasacds",
+  storageBucket: "fichasacds.appspot.com",
+  messagingSenderId: "1053745027045",
+  appId: "1:1053745027045:web:2b618f43589fbbdd2b410c"
+};
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
